--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,156 @@ select:-webkit-autofill:focus {
 }
 
 
+/* BUTTON  */
+.button {
+  display: inline-block;
+  padding: 8px 22px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 2;
+  text-decoration: none;
+  cursor: pointer;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.button:active {
+  opacity: 0.6;
+}
+
+
+/* BUTTON-RED  */
+.button--red {
+  background-color: var(--red);
+  color: #fff;
+}
+
+.button--red:hover {
+  border-color:var(--red);
+  background-color: #fff;
+  color:var(--red);
+}
+
+.button--site-header {
+  padding: 10px 31px;
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+}
+
+
+/* BUTTON-BlUE  */
+.button--blue {
+  background-color:var(--blue);
+  color: #fff;
+}
+
+.button--blue:hover {
+  border-color:var(--blue);
+  background-color: #fff;
+  color:var(--blue);
+}
+
+
+/* BUTTON-GRAY  */
+.button--gray {
+  background-color:#f7f7f7;
+  color:var(--text-color)
+}
+
+.button--gray:hover {
+  border-color:#5b6074;
+  background-color: #fff;
+  color:var(--text-color)
+}
+
+
+/* BUTTON-BLOCK  */
+.button--block {
+  width: 100%;
+}
+
+
+/* LOGO  */
+.logo {
+  display: block;
+  text-decoration: none;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+
+.logo:active {
+  opacity: 0.6;
+}
+
+.logo__img {
+  display: block;
+  width: 149px;
+  height: 25px;
+  object-fit: contain;
+}
+
+
+/* SITENAV  */
+
+.sitenav {
+  font-size: 13px;
+  line-height: 17px;
+  letter-spacing: 1.5px;
+}
+
+.sitenav__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 48px;
+}
+
+.sitenav__link {
+  display: block;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.sitenav__link:hover {
+  color: var(--red);
+}
+
+
+.sitenav__link:active {
+  opacity: 0.6;
+}
+
+/* SITE-HEADER  */
+.site-header {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  text-transform: uppercase;
+}
+
+.site-header__container {
+  display: flex;
+  align-items: center;
+}
+
+.site-header__logo {
+  margin-right: auto;
+}
+
+.site-header__sitenav {
+  margin-right: 48px;
+}
+
+
+
+
 /* RETINA-CSS  */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
