--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,6 @@ select:-webkit-autofill:focus {
 } */
 
 
-
 /* MAIN CONTENT  */
 .main-content {
   flex-grow: 1;
@@ -255,6 +254,80 @@ select:-webkit-autofill:focus {
 }
 
 
+/* FEATURE-TAB-PANEL  */
+.feature-tab-panel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.feature-tab-panel__img {
+  margin-right: 30px;
+  object-fit: contain;
+}
+
+.feature-tab-panel__info {
+  max-width: 445px;
+}
+
+.feature-tab-oanel__title {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 32px;
+  line-height: 52px;
+  font-weight: 500;
+  color: var(--text-color);
+}
+
+.feature-tab-panel__text {
+  margin-top: 0;
+  margin-bottom: 32px;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+
+/* TABS  */
+.tabs__list {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.tabs__item {
+  width: 243px;
+  border-bottom: 1px solid rgba(73, 93, 207, 0.2001);
+}
+
+.tabs__link {
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  border-bottom: 4px solid transparent;
+  font-size: 16px;
+  line-height: 17px;
+  color:var(--text-color-75);
+  text-decoration: none;
+  text-align: center;
+  letter-spacing: 0.5px;
+}
+
+.tabs__link:hover {
+  color: var(--red);
+}
+
+.tabs__link:active {
+  opacity: 0.6;
+}
+
+.tabs__item--active .tabs__link {
+  border-color: var(--red);
+  color: var(--text-color);
+}
+
+
 /* SECTIONS */
 .section {
   padding-top: 75px;
@@ -283,6 +356,24 @@ select:-webkit-autofill:focus {
   margin: 0;
   font-size: 18px;
   line-height: 28px;
+}
+
+
+/* TABS-PANELS  */
+.tabs__panels {
+  padding-top: 75px;
+  padding-bottom: 165px;
+  background-image: url("../img/blue-hero-bg.svg");
+  background-repeat: no-repeat;
+  background-position: calc(50% - 580px) 156px;
+}
+
+.tabs__panel {
+  display: none;
+}
+
+.tabs__panel--active {
+  display: block;
 }
 
 
@@ -359,6 +450,12 @@ select:-webkit-autofill:focus {
   height: 385px;
   object-fit: contain;
   filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+}
+
+
+/* FEATURES  */
+.features__section-info {
+  margin-bottom: 44px;
 }
 
 
