fix BEM naming problem errors in features tabs

--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ select:-webkit-autofill:focus {
 
 
 /* TABS-PANELS  */
-.tabs__panels {
+.tabpanels {
   padding-top: 75px;
   padding-bottom: 165px;
   background-image: url("../img/blue-hero-bg.svg");
@@ -368,11 +368,11 @@ select:-webkit-autofill:focus {
   background-position: calc(50% - 580px) 156px;
 }
 
-.tabs__panel {
+.tabpanels__item {
   display: none;
 }
 
-.tabs__panel--active {
+.tabpanels__item--active {
   display: block;
 }
 
