update feature-tab-panel__img margins

--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ select:-webkit-autofill:focus {
 /* FEATURE-TAB-PANEL  */
 .feature-tab-panel {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -265,6 +265,19 @@ select:-webkit-autofill:focus {
   margin-right: 30px;
   object-fit: contain;
 }
+
+.feature-tab-panel__img--bookmark-manager {
+  margin-right: 126px;
+}
+
+.feature-tab-panel__img--simple{
+  margin-right: 115px;
+}
+
+.feature-tab-panel__img--shering{
+  margin-right: 145px;
+}
+
 
 .feature-tab-panel__info {
   max-width: 445px;
