--- a/css/main.css
+++ b/css/main.css
@@ -467,10 +467,93 @@ select:-webkit-autofill:focus {
 
 
 /* FEATURES  */
+.features {
+  padding-bottom: 0;
+}
 .features__section-info {
   margin-bottom: 44px;
 }
 
+
+/* EXTENSION  */
+.extansions-inner {
+  max-width: 910px;
+  margin: 0 auto;
+}
+
+.extansions__list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: -35px;
+  list-style: none;
+}
+
+.extansions__item {
+  width: 100%;
+  max-width: 280px;
+  margin-left: 35px;
+}
+
+.extansions__item:nth-child(3n + 2) {
+  margin-top: 40px;
+}
+
+.extansions__item:nth-child(3n) {
+  margin-top: 80px;
+}
+
+
+/* ECTANSION  */
+.extansion {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 45px 24px 24px;
+  box-shadow: 0px 10px 20px -5px rgba(73, 93, 207, 0.20012);
+  border-radius: 15px;
+  text-align: center;
+}
+
+.extansion::after {
+  position: absolute;
+  left: 0;
+  bottom: 96px;
+  width: 100%;
+  height: 4px;
+  background-image: url("../img/circled-divader.svg");
+  background-position: center center;
+  content:"";
+}
+
+.extansion__img {
+  width: 105px;
+  height: 100px;
+  margin-bottom: 32px;
+  object-fit: contain;
+}
+
+.extansion__title {
+  margin-top: 0;
+  margin-bottom: 6px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 500;
+  color: var(--text-color);
+}
+
+.extansion__browser-version {
+  margin-top: 0;
+  margin-bottom: 60px;
+  font-size: 15px;
+  line-height: 28px;
+  font-weight: 400;
+  color: var(--text-color-50);
+}
 
 
 
