--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,12 @@ select:-webkit-autofill:focus {
 .sitenav__link {
   display: block;
   text-decoration: none;
+  text-transform: uppercase;
   color: var(--text-color);
+}
+
+.sitenav--white .sitenav__link {
+  color: #fff;
 }
 
 .sitenav__link:hover {
@@ -473,6 +478,37 @@ select:-webkit-autofill:focus {
   margin: 0;
 }
 
+.accordion__item-text:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+
+/* SOCIALS  */
+.socials {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.socials__item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.socials__link {
+  display: flex;
+  color: #fff;
+}
+
+.socials__link:hover {
+  color: var(--red);
+}
+
+.socials__link:active {
+  opacity: 0.6;
+}
+
 
 /* SITE-HEADER  */
 .site-header {
@@ -591,7 +627,7 @@ select:-webkit-autofill:focus {
 }
 
 
-/* ECTANSION  */
+/* ETANSION  */
 .extansion {
   position: relative;
   display: flex;
@@ -758,6 +794,29 @@ select:-webkit-autofill:focus {
 .subscription__field:placeholder-shown ~ .subscription__error {
   display: none;
 }
+
+
+/* SITE FOOTER */
+.site-footer {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  background-color: var(--text-color);
+  color: #fff;
+}
+
+.site-footer__container {
+  display: flex;
+  align-items: center;
+}
+
+.site-footer__logo {
+  margin-right: 63px;
+}
+
+.site-footer__sitenav {
+  margin-right: auto;
+}
+
 
 
 
